After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659594 - Shouldn't try requesting Call channel if built without Call support
Shouldn't try requesting Call channel if built without Call support
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
2.33.x
Other Linux
: Normal normal
: 3.2
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-20 14:30 UTC by Guillaume Desmottes
Modified: 2011-09-26 09:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Factor out call_new_with_streams() (2.39 KB, patch)
2011-09-20 15:01 UTC, Guillaume Desmottes
committed Details | Review
Don't try to request a Call channel if built without Call support (2.53 KB, patch)
2011-09-20 15:01 UTC, Guillaume Desmottes
reviewed Details | Review
Don't try to request a Call channel if built without Call support (2.14 KB, patch)
2011-09-21 08:14 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2011-09-20 14:30:48 UTC
There is no point to and Call support is still experimental so could trigger nasty bug in Gabble like this crash: https://bugs.freedesktop.org/show_bug.cgi?id=39768
Comment 1 Guillaume Desmottes 2011-09-20 15:01:05 UTC
Created attachment 197071 [details] [review]
Factor out call_new_with_streams()
Comment 2 Guillaume Desmottes 2011-09-20 15:01:08 UTC
Created attachment 197072 [details] [review]
Don't try to request a Call channel if built without Call support
Comment 3 Emilio Pozuelo Monfort 2011-09-20 15:11:40 UTC
Comment on attachment 197071 [details] [review]
Factor out call_new_with_streams()

++
Comment 4 Emilio Pozuelo Monfort 2011-09-20 15:13:35 UTC
Comment on attachment 197072 [details] [review]
Don't try to request a Call channel if built without Call support

>+#ifdef HAVE_CALL
> GHashTable *
> empathy_call_create_call_request (const gchar *contact,
>     gboolean initial_audio,
>@@ -94,6 +95,7 @@ empathy_call_create_call_request (const gchar *contact,
>       initial_video,
>     NULL);
> }
>+#endif

If you #ifdef this here, you should do it in the header too. I'd just not #ifdef it at all.

Looks good otherwise.
Comment 5 Guillaume Desmottes 2011-09-21 08:14:12 UTC
Created attachment 197125 [details] [review]
Don't try to request a Call channel if built without Call support
Comment 6 Emilio Pozuelo Monfort 2011-09-21 09:47:51 UTC
Comment on attachment 197125 [details] [review]
Don't try to request a Call channel if built without Call support

++
Comment 7 Guillaume Desmottes 2011-09-26 09:57:26 UTC
Attachment 197071 [details] pushed as b6b5e35 - Factor out call_new_with_streams()
Attachment 197125 [details] pushed as e13bdb2 - Don't try to request a Call channel if built without Call support