Factor out call_new_with_streams()

https://bugzilla.gnome.org/show_bug.cgi?id=659594